Added github and reference pages

--- a/index.html
+++ b/index.html
@@ -171,6 +171,11 @@
         <h1>Hello World</h1>
         <p class="sub_head">Hello World?</p>
         <p class="info">I used Bideo.js, go check it out!</p>
+        <p>Links below!</p>
+      </div>
+      <div id="links">
+        <a href="https://github.com/rishabhp/bideo.js">View on Github</a>
+        <a href="http://codetheory.in/html5-fullscreen-background-video/">How it works</a>
       </div>
     </section>
   </div>
