--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </head>
 <body>
   <div id="container">
-    <video id="background_video" id="video" loop unmuted>
+    <video id="background_video" id="video" loop muted>
         <source src="helloworld.mp4" type="video/mp4">
     </video>
     <div id="video_cover"></div>
